package com.naveen.factory;

public class Bike implements IVehicle{


	public void bikeType() {
		System.out.println("Your bike type info goes here... ");
	}

	@Override
	public void move() {
		// TODO Auto-generated method stub
		
	}
}
