package com.naveen.factory;

// interfaces are 100% abstract 
public interface IVehicle {
	// the minimum and maximum visibility of any method in the 
	// interface is public 
	public void move();
}
