package com.naveen.factory;

public class Truck implements IVehicle {


	public void loadCapacity() {
		System.out.println("Truck capacity goes here... ");
	}

	@Override
	public void move() {
		// TODO Auto-generated method stub
		
	}
}
