package com.naveen.factory;

public enum Types {
	CAR, TRUCK, BIKE
}
